--- a/mods/3dskinlayers.pw.toml
+++ b/mods/3dskinlayers.pw.toml
@@ -2,6 +2,11 @@ name = "3D Skin Layers"
 filename = "skinlayers3d-fabric-1.6.7-mc1.20.1.jar"
 side = "client"
 
+[option]
+optional = true
+default = true
+description = "Renders skin layers as voxels instead of pixels"
+
 [download]
 url = "https://cdn.modrinth.com/data/zV5r3pPn/versions/kFPX5Wmk/skinlayers3d-fabric-1.6.7-mc1.20.1.jar"
 hash-format = "sha512"
