--- a/mods/altorigingui.pw.toml
+++ b/mods/altorigingui.pw.toml
@@ -2,6 +2,11 @@ name = "Alternate Origin GUI"
 filename = "AltOriginGui-fabric-1.20.1-1.1.1.jar"
 side = "client"
 
+[option]
+optional = true
+default = true
+description = "Changes Origin selection screens to use a grid instead of page arrows for selection"
+
 [download]
 url = "https://cdn.modrinth.com/data/ldWHqZwQ/versions/oSJyDQ48/AltOriginGui-fabric-1.20.1-1.1.1.jar"
 hash-format = "sha512"
