--- a/config/paxi/datapacks/continents.pw.toml
+++ b/config/paxi/datapacks/continents.pw.toml
@@ -1,6 +1,7 @@
 name = "Continents"
 filename = "Continents_1.21_v1.1.5.zip"
 side = "server"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/bQ5TJA1E/versions/94DuVevC/Continents_1.21_v1.1.5.zip"
