--- a/config/paxi/datapacks/incendium.pw.toml
+++ b/config/paxi/datapacks/incendium.pw.toml
@@ -1,6 +1,7 @@
 name = "Incendium"
 filename = "Incendium_1.20_v5.3.5.zip"
 side = "server"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/ZVzW5oNS/versions/b9pN4Twz/Incendium_1.20_v5.3.5.zip"
