--- a/config/paxi/datapacks/no-more-villages.pw.toml
+++ b/config/paxi/datapacks/no-more-villages.pw.toml
@@ -1,6 +1,7 @@
 name = "No More Villages"
 filename = "No More Villages.zip"
 side = "server"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/1Iz8blYk/versions/lNzkh34L/No%20More%20Villages.zip"
