--- a/config/paxi/datapacks/tc-deactivate-portals.pw.toml
+++ b/config/paxi/datapacks/tc-deactivate-portals.pw.toml
@@ -1,6 +1,7 @@
 name = "Deactivate Portals"
 filename = "Deactivate-Portals.zip"
 side = "server"
+pin = true
 
 [download]
 url = "https://cdn.modrinth.com/data/L83JDWD9/versions/bOGaf8Q5/Deactivate-Portals.zip"
