Made lots of weapons count as heavy for zenith

--- a/config/zenith/adventure.cfg
+++ b/config/zenith/adventure.cfg
@@ -7,8 +7,237 @@ affixes {
     # Valid types are: none, sword, trident, shield, heavy_weapon, pickaxe, shovel, crossbow, bow
     # Default: [minecraft:iron_sword|sword], [minecraft:shulker_shell|none]
     S:"Equipment Type Overrides" <
-        minecraft:iron_sword|sword
-        minecraft:shulker_shell|none
+        iceandfire:troll_weapon_axe|heavy_weapon
+        iceandfire:troll_weapon_column|heavy_weapon
+        iceandfire:troll_weapon_column_forest|heavy_weapon
+        iceandfire:troll_weapon_column_frost|heavy_weapon
+        iceandfire:troll_weapon_hammer|heavy_weapon
+        iceandfire:troll_weapon_trunk|heavy_weapon
+        iceandfire:troll_weapon_trunk_frost|heavy_weapon
+
+        paladins:wooden_great_hammer|heavy_weapon
+        paladins:stone_great_hammer|heavy_weapon
+        paladins:iron_great_hammer|heavy_weapon
+        paladins:golden_great_hammer|heavy_weapon
+        paladins:diamond_great_hammer|heavy_weapon
+        paladins:netherite_great_hammer|heavy_weapon
+
+        rogues:stone_double_axe|heavy_weapon
+        rogues:iron_double_axe|heavy_weapon
+        rogues:golden_double_axe|heavy_weapon
+        rogues:diamond_double_axe|heavy_weapon
+        rogues:netherite_double_axe|heavy_weapon
+
+        simplyswords:iron_claymore|heavy_weapon
+        simplyswords:iron_greathammer|heavy_weapon
+        simplyswords:iron_greataxe|heavy_weapon
+        simplyswords:iron_scythe|heavy_weapon
+        simplyswords:iron_halberd|heavy_weapon
+
+        simplyswords:gold_claymore|heavy_weapon
+        simplyswords:gold_greathammer|heavy_weapon
+        simplyswords:gold_greataxe|heavy_weapon
+        simplyswords:gold_scythe|heavy_weapon
+        simplyswords:gold_halberd|heavy_weapon
+
+        simplyswords:diamond_claymore|heavy_weapon
+        simplyswords:diamond_greathammer|heavy_weapon
+        simplyswords:diamond_greataxe|heavy_weapon
+        simplyswords:diamond_scythe|heavy_weapon
+        simplyswords:diamond_halberd|heavy_weapon
+
+        simplyswords:netherite_claymore|heavy_weapon
+        simplyswords:netherite_greathammer|heavy_weapon
+        simplyswords:netherite_greataxe|heavy_weapon
+        simplyswords:netherite_scythe|heavy_weapon
+        simplyswords:netherite_halberd|heavy_weapon
+
+        simplyswords:runic_claymore|heavy_weapon
+        simplyswords:runic_greathammer|heavy_weapon
+        simplyswords:runic_greataxe|heavy_weapon
+        simplyswords:runic_scythe|heavy_weapon
+        simplyswords:runic_halberd|heavy_weapon
+
+        simplyswords:brimstone_claymore|heavy_weapon
+        simplyswords:watcher_claymore|heavy_weapon
+        simplyswords:hearthflame|heavy_weapon
+        simplyswords:soulkeeper|heavy_weapon
+        simplyswords:twisted_blade|heavy_weapon
+        simplyswords:soulpyre|heavy_weapon
+        simplyswords:icewhisper|heavy_weapon
+        simplyswords:arcanethyst|heavy_weapon
+        simplyswords:thunderbrand|heavy_weapon
+        simplyswords:slumbering_lichblade|heavy_weapon
+        simplyswords:waxweaver|heavy_weapon
+        simplyswords:hiveheart|heavy_weapon
+        simplyswords:ribboncleaver|heavy_weapon
+        simplyswords:decaying_relic|heavy_weapon
+        simplyswords:magiscythe|heavy_weapon
+        simplyswords:enigma|heavy_weapon
+        simplyswords:caelestis|heavy_weapon
+
+        magistuarmory:wood_bastardsword|heavy_weapon
+        magistuarmory:wood_estoc|heavy_weapon
+        magistuarmory:wood_claymore|heavy_weapon
+        magistuarmory:wood_zweihander|heavy_weapon
+        magistuarmory:wood_flamebladedsword|heavy_weapon
+        magistuarmory:wood_lochaberaxe|heavy_weapon
+        magistuarmory:wood_concavehalberd|heavy_weapon
+        magistuarmory:wood_heavymace|heavy_weapon
+        magistuarmory:wood_heavywarhammer|heavy_weapon
+        magistuarmory:wood_lucernhammer|heavy_weapon
+        magistuarmory:wood_morgenstern|heavy_weapon
+        magistuarmory:wood_chainmorgenstern|heavy_weapon
+
+        magistuarmory:stone_bastardsword|heavy_weapon
+        magistuarmory:stone_estoc|heavy_weapon
+        magistuarmory:stone_claymore|heavy_weapon
+        magistuarmory:stone_zweihander|heavy_weapon
+        magistuarmory:stone_flamebladedsword|heavy_weapon
+        magistuarmory:stone_lochaberaxe|heavy_weapon
+        magistuarmory:stone_concavehalberd|heavy_weapon
+        magistuarmory:stone_heavymace|heavy_weapon
+        magistuarmory:stone_heavywarhammer|heavy_weapon
+        magistuarmory:stone_lucernhammer|heavy_weapon
+        magistuarmory:stone_morgenstern|heavy_weapon
+        magistuarmory:stone_chainmorgenstern|heavy_weapon
+
+        magistuarmory:iron_bastardsword|heavy_weapon
+        magistuarmory:iron_estoc|heavy_weapon
+        magistuarmory:iron_claymore|heavy_weapon
+        magistuarmory:iron_zweihander|heavy_weapon
+        magistuarmory:iron_flamebladedsword|heavy_weapon
+        magistuarmory:iron_lochaberaxe|heavy_weapon
+        magistuarmory:iron_concavehalberd|heavy_weapon
+        magistuarmory:iron_heavymace|heavy_weapon
+        magistuarmory:iron_heavywarhammer|heavy_weapon
+        magistuarmory:iron_lucernhammer|heavy_weapon
+        magistuarmory:iron_morgenstern|heavy_weapon
+        magistuarmory:iron_chainmorgenstern|heavy_weapon
+
+        magistuarmory:gold_bastardsword|heavy_weapon
+        magistuarmory:gold_estoc|heavy_weapon
+        magistuarmory:gold_claymore|heavy_weapon
+        magistuarmory:gold_zweihander|heavy_weapon
+        magistuarmory:gold_flamebladedsword|heavy_weapon
+        magistuarmory:gold_lochaberaxe|heavy_weapon
+        magistuarmory:gold_concavehalberd|heavy_weapon
+        magistuarmory:gold_heavymace|heavy_weapon
+        magistuarmory:gold_heavywarhammer|heavy_weapon
+        magistuarmory:gold_lucernhammer|heavy_weapon
+        magistuarmory:gold_morgenstern|heavy_weapon
+        magistuarmory:gold_chainmorgenstern|heavy_weapon
+
+        magistuarmory:diamond_bastardsword|heavy_weapon
+        magistuarmory:diamond_estoc|heavy_weapon
+        magistuarmory:diamond_claymore|heavy_weapon
+        magistuarmory:diamond_zweihander|heavy_weapon
+        magistuarmory:diamond_flamebladedsword|heavy_weapon
+        magistuarmory:diamond_lochaberaxe|heavy_weapon
+        magistuarmory:diamond_concavehalberd|heavy_weapon
+        magistuarmory:diamond_heavymace|heavy_weapon
+        magistuarmory:diamond_heavywarhammer|heavy_weapon
+        magistuarmory:diamond_lucernhammer|heavy_weapon
+        magistuarmory:diamond_morgenstern|heavy_weapon
+        magistuarmory:diamond_chainmorgenstern|heavy_weapon
+
+        magistuarmory:netherite_bastardsword|heavy_weapon
+        magistuarmory:netherite_estoc|heavy_weapon
+        magistuarmory:netherite_claymore|heavy_weapon
+        magistuarmory:netherite_zweihander|heavy_weapon
+        magistuarmory:netherite_flamebladedsword|heavy_weapon
+        magistuarmory:netherite_lochaberaxe|heavy_weapon
+        magistuarmory:netherite_concavehalberd|heavy_weapon
+        magistuarmory:netherite_heavymace|heavy_weapon
+        magistuarmory:netherite_heavywarhammer|heavy_weapon
+        magistuarmory:netherite_lucernhammer|heavy_weapon
+        magistuarmory:netherite_morgenstern|heavy_weapon
+        magistuarmory:netherite_chainmorgenstern|heavy_weapon
+
+        magistuarmory:copper_bastardsword|heavy_weapon
+        magistuarmory:copper_estoc|heavy_weapon
+        magistuarmory:copper_claymore|heavy_weapon
+        magistuarmory:copper_zweihander|heavy_weapon
+        magistuarmory:copper_flamebladedsword|heavy_weapon
+        magistuarmory:copper_lochaberaxe|heavy_weapon
+        magistuarmory:copper_concavehalberd|heavy_weapon
+        magistuarmory:copper_heavymace|heavy_weapon
+        magistuarmory:copper_heavywarhammer|heavy_weapon
+        magistuarmory:copper_lucernhammer|heavy_weapon
+        magistuarmory:copper_morgenstern|heavy_weapon
+        magistuarmory:copper_chainmorgenstern|heavy_weapon
+
+        magistuarmory:steel_bastardsword|heavy_weapon
+        magistuarmory:steel_estoc|heavy_weapon
+        magistuarmory:steel_claymore|heavy_weapon
+        magistuarmory:steel_zweihander|heavy_weapon
+        magistuarmory:steel_flamebladedsword|heavy_weapon
+        magistuarmory:steel_lochaberaxe|heavy_weapon
+        magistuarmory:steel_concavehalberd|heavy_weapon
+        magistuarmory:steel_heavymace|heavy_weapon
+        magistuarmory:steel_heavywarhammer|heavy_weapon
+        magistuarmory:steel_lucernhammer|heavy_weapon
+        magistuarmory:steel_morgenstern|heavy_weapon
+        magistuarmory:steel_chainmorgenstern|heavy_weapon
+
+        magistuarmory:silver_bastardsword|heavy_weapon
+        magistuarmory:silver_estoc|heavy_weapon
+        magistuarmory:silver_claymore|heavy_weapon
+        magistuarmory:silver_zweihander|heavy_weapon
+        magistuarmory:silver_flamebladedsword|heavy_weapon
+        magistuarmory:silver_lochaberaxe|heavy_weapon
+        magistuarmory:silver_concavehalberd|heavy_weapon
+        magistuarmory:silver_heavymace|heavy_weapon
+        magistuarmory:silver_heavywarhammer|heavy_weapon
+        magistuarmory:silver_lucernhammer|heavy_weapon
+        magistuarmory:silver_morgenstern|heavy_weapon
+        magistuarmory:silver_chainmorgenstern|heavy_weapon
+
+        magistuarmory:tin_bastardsword|heavy_weapon
+        magistuarmory:tin_estoc|heavy_weapon
+        magistuarmory:tin_claymore|heavy_weapon
+        magistuarmory:tin_zweihander|heavy_weapon
+        magistuarmory:tin_flamebladedsword|heavy_weapon
+        magistuarmory:tin_lochaberaxe|heavy_weapon
+        magistuarmory:tin_concavehalberd|heavy_weapon
+        magistuarmory:tin_heavymace|heavy_weapon
+        magistuarmory:tin_heavywarhammer|heavy_weapon
+        magistuarmory:tin_lucernhammer|heavy_weapon
+        magistuarmory:tin_morgenstern|heavy_weapon
+        magistuarmory:tin_chainmorgenstern|heavy_weapon
+
+        magistuarmory:bronze_bastardsword|heavy_weapon
+        magistuarmory:bronze_estoc|heavy_weapon
+        magistuarmory:bronze_claymore|heavy_weapon
+        magistuarmory:bronze_zweihander|heavy_weapon
+        magistuarmory:bronze_flamebladedsword|heavy_weapon
+        magistuarmory:bronze_lochaberaxe|heavy_weapon
+        magistuarmory:bronze_concavehalberd|heavy_weapon
+        magistuarmory:bronze_heavymace|heavy_weapon
+        magistuarmory:bronze_heavywarhammer|heavy_weapon
+        magistuarmory:bronze_lucernhammer|heavy_weapon
+        magistuarmory:bronze_morgenstern|heavy_weapon
+        magistuarmory:bronze_chainmorgenstern|heavy_weapon
+
+        magistuarmory:rusted_bastardsword|heavy_weapon
+        magistuarmory:rusted_estoc|heavy_weapon
+        magistuarmory:rusted_claymore|heavy_weapon
+        magistuarmory:rusted_zweihander|heavy_weapon
+        magistuarmory:rusted_flamebladedsword|heavy_weapon
+        magistuarmory:rusted_lochaberaxe|heavy_weapon
+        magistuarmory:rusted_concavehalberd|heavy_weapon
+        magistuarmory:rusted_heavymace|heavy_weapon
+        magistuarmory:rusted_heavywarhammer|heavy_weapon
+        magistuarmory:rusted_lucernhammer|heavy_weapon
+        magistuarmory:rusted_morgenstern|heavy_weapon
+        magistuarmory:rusted_chainmorgenstern|heavy_weapon
+
+        magistuarmory:blacksmith_hammer|heavy_weapon
+        magistuarmory:barbedclub|heavy_weapon
+        magistuarmory:pitchfork|heavy_weapon
+        magistuarmory:noble_sword|heavy_weapon
+        magistuarmory:club|heavy_weapon
+        magistuarmory:messer_sword|heavy_weapon
      >
 
     # The chance that a naturally spawned mob will be granted an affix item. 0 = 0%, 1 = 100%
